hphp/hack/test/typecheck/abstract_typeconsts/redeclare_no_default.php.exp
File "redeclare_no_default.php", line 8, characters 23-23:
This abstract type constant does not have a default type (Typing[4320])
File "redeclare_no_default.php", line 4, characters 23-23:
It cannot override an abstract type constant that has a default type
File "redeclare_no_default.php", line 8, characters 23-23:
Unable to satisfy constraint on this type constant (Typing[4110])
File "redeclare_no_default.php", line 8, characters 28-33:
Expected string
File "redeclare_no_default.php", line 4, characters 36-43:
But got arraykey
